# jrnl

./: .gitignore  LICENCE.txt  README.md  THIRD_PARTY_NOTICES.txt  concept.md  initial_plan.md  install.sh  pyproject.toml  uninstall.sh
hooks/: post-commit.template
jrnl/: __main__.py  cli.py  config.py  version.py
jrnl/commands/: config_cmd.py  daily.py  logs.py  new.py  uninstall_cmd.py
jrnl/database/: connection.py  models.py  operations.py
jrnl/database/sql_statements/: __init__.py
jrnl/git_integration/: commit_processor.py
jrnl/llm_providers/: __init__.py  anthropic_provider.py  base.py  ollama_provider.py  prompts.py
jrnl/utils/: date_utils.py  errors.py  formatting.py
