[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jrnl-dev"
version = "0.1.0"
description = "A CLI tool for developers to track work for daily standups using git hooks and LLM-powered summaries"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "JRNL Contributors"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Version Control :: Git",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "anthropic>=0.39.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "mypy>=1.0",
]

[project.scripts]
jrnl = "jrnl.cli:main"

[tool.setuptools]
packages = ["jrnl", "jrnl.commands", "jrnl.database", "jrnl.database.sql_statements", "jrnl.git_integration", "jrnl.llm_providers", "jrnl.utils"]

[tool.setuptools.package-data]
jrnl = ["py.typed"]
